--- a/blog-details.html
+++ b/blog-details.html
@@ -327,11 +327,12 @@
                             </p>
                         </div>
                         <blockquote>
-                            <span> <img src="/assets/resources/img/Service-elements/quote-icon.svg" alt="">
-                            </span>
-                            “I invented the term because I thought Human Interface and usability were too narrow: I
-                            wanted to cover all aspects of the person’s experience with a system, including industrial
-                            design, graphics, the interface, the physical interaction, and the manual.”
+                            <p>
+                                “I invented the term because I thought Human Interface and usability were too narrow: I
+                                wanted to cover all aspects of the person’s experience with a system, including
+                                industrial
+                                design, graphics, the interface, the physical interaction, and the manual.”
+                            </p>
                         </blockquote>
                 </section>
 
