--- a/strategy.html
+++ b/strategy.html
@@ -283,11 +283,11 @@
                 <section class="ser-hero strategy" data-scroll data-bgcolor="#fff" data-humcolor="#000"
                     data-textcolor="#000">
                     <video autoplay="" loop="" style="background-image:url;     position: absolute;
-                    left: 0;
+                    /* left: 0; */
                     right: 0;
                     margin: 0 auto;
                     object-fit: cover;
-                    width: 70%;" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+                    width: 65%;" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
                         <source src="/assets/resources/Service-bg.mp4" data-wf-ignore="true">
                     </video>
                     <div class="el1 el-bg"></div>
