--- a/blog-details.html
+++ b/blog-details.html
@@ -17,7 +17,7 @@
     <div class="loading-screen"></div>
 </div>
 
-<body data-barba="wrapper">
+<body data-barba="wrapper" style="background-color: #fff;">
     <div class="init-load">
         <div id="noise2"></div>
         <div class="inner">
@@ -278,7 +278,7 @@
 
     <main role="main" id="main">
         <div class="scroll-content smooth-scroll" data-scroll-speed="8">
-            <div class="wrapper" style="background: #fff;">
+            <div class="wrapper">
                 <section class="blog-details" data-humcolor="#000">
                     <div class="container">
                         <div class="content" data-scroll data-scroll-delay="0.1" data-scroll-speed="2">
@@ -289,19 +289,20 @@
                             <div class="blog-flex">
                                 <div class="date">
                                     <span>
-                                        <img src="" alt="" />
+                                        <img src="/assets/resources/img/blog-element/time-icon.svg" width="20" alt="" />
                                     </span>
                                     <p>March 09, 2022</p>
                                 </div>
                                 <div class="ad">
                                     <span>
-                                        <img src="" alt="" />
+                                        <img src="/assets/resources/img/blog-element/user-icon.svg" width="20" alt="" />
                                     </span>
                                     <p>Admin</p>
                                 </div>
                                 <div class="comen">
                                     <span>
-                                        <img src="" alt="" />
+                                        <img src="/assets/resources/img/blog-element/quote-icon.svg" width="20"
+                                            alt="" />
                                     </span>
                                     <p>Leave a comment</p>
                                 </div>
@@ -309,9 +310,10 @@
                         </div>
                     </div>
                 </section>
-                <img src="/assets/resources/img/bolg11.webp" class="blog-hero" alt="blog" />
+                <img src="/assets/resources/img/blog-element/Blog-001.png" class="blog-hero" alt="blog" />
                 <div class="overlap-text">
-                    <p>Experience Design & User Experience Design</p>
+                    <p data-scroll="" data-scroll-speed="9" data-scroll-direction="horizontal">Experience Design & User
+                        Experience Design</p>
                 </div>
                 <section class="blog-d" data-humcolor="#000">
                     <div class="container">
@@ -341,81 +343,92 @@
                         <div class="blog-left">
                             <!-- <h2>What Is Contrast </h2> -->
                             <div class="p-img">
-                                <img src="/assets/resources/img/type.png" />
+                                <img src="/assets/resources/img/blog-element/Blog-002.png" />
                             </div>
                         </div>
                         <div class="blog-right">
-                            <p>You should use color, texture, and typography to communicate clearly. This will help your
-                                users understand the meaning of your content, and they'll be able to locate what they're
-                                looking for in the most convenient manner. Try
-                                to avoid using large fonts, and try to make everything visible. Also, use different
-                                types of fonts, and use them in different arrangements to improve legibility and
-                                scanability. You can also use various UI elements to guide
-                                your users and minimize their frustration.
-                            </p>
-                            <p>
-                                Design for simplicity. Keep your users' needs and wants in mind when you design your
-                                interface. This will help your users focus on the task at hand and not worry about
-                                getting lost or having to go back and read information multiple times. When you make
-                                sure that your designs are intuitive and easy to use, you'll be sure to build loyal
-                                customers. You'll also avoid costly mistakes. If you're unsure of which UX best practice
-                                to follow, start with user research.
-                            </p>
+                            <div class="p-img">
+                                <img src="/assets/resources/img/blog-element/Blog-003.png" />
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="blog-conent">
-                    <p>Avoid clutter and keep navigation simple. Too much clutter is bad for the user experience. When
-                        designing your UI, avoid placing all of your features on a single screen. Stick to a small
-                        number of important functions, and you'll be
-                        sure to keep your users happy. If you're creating a web app, make sure the UI is intuitive and
-                        easy to use. The user experience will be a major factor in your success, and following these 10
-                        best practices will help you create
-                        a great experience for your customers.</p>
-                    <p>One of the top UX best practices for designing a website is keeping it simple. Avoid clutter by
-                        keeping your site simple. This will make your users feel more comfortable and satisfied with
-                        your product or service. Furthermore, your
-                        website should be easy to navigate, and visitors should be able to find everything they need.
-                        This is one of the most important UX tips for your business. In addition, you should consider
-                        the style of your website to be easy to
-                        use.
+                    <p>The term User Experience Design was not coined until the early 1990s, but examples of Experience
+                        Design date back even earlier. For instance, Walt Disney is often regarded as one of the world’s
+                        first Experience Designer because of his theme parks and resorts.</p>
+                    <p>Walt Disney had the vision to create an amusement park that was fun for both children and adults
+                        alike. However, during the 1950s, amusement parks were seen as dirty and dowdy places where
+                        children shouldn’t go. Walt Dis¬ney wanted to change that perception and provide park-goers with
+                        a positive experience. The designers and engineers put a lot of thought and contemplation into
+                        the park (“Disney Imagineers”).
                     </p>
                 </div>
-                <div class="container blg" style="margin-top: 10%;" data-scroll data-scroll-delay="0.1"
+
+                <div class="blog-conent">
+                    <p>An example of good experience design at the parks is the variety of choices that visitors can
+                        select from. The parks were designed to appeal to all kinds of guests. Whether you’re a teenager
+                        looking for thrill-seeking rides or a young family wanting to ride Dumbo the flying elephant or
+                        the teacup ride, there’s something for everyone here.</p>
+                    <h2>So, what precisely is the difference between Experience Design & User Experience?</h2>
+                    <p>
+                        Well, most people believe it’s a debate about semantics. But we beg to differ.
+                    </p>
+                </div>
+                <div class="container blg" style="margin-top: 3%;" data-scroll data-scroll-delay="0.1"
                     data-scroll-speed="2" data-scroll-offset="100">
-                    <img src="/assets/resources/img/pass-on-landing-page-design-tubik.png" style="width: 100%;" />
+                    <img src="/assets/resources/img/blog-element/Blog-004.png" style="width: 100%;" />
                 </div>
                 <div class="blog-conent">
-                    <p>One of the most common mistakes in software is not making sure that the user can easily
-                        understand the error message. An error is an important part of a user's experience. You
-                        shouldn't make it difficult for your users to use your
-                        product. Aside from following these tips, you should also consider the device and operating
-                        system used by the end-user. In order to make the process smooth and error-free, it's important
-                        to be able to find your app.</p>
-                    <p>The visual hierarchy of the app should reflect the user's journey. The elements should be placed
-                        in an appropriate order and be in proportion with each other. In addition, it's important to
-                        consider the user's needs and preferences.
-                        By doing so, you can create a more efficient application that will enhance the user's
-                        experience. And by following these guidelines, you can ensure that your users will have the best
-                        possible experience with your app.
+                    <p>In contrast, Experience design (XD) follows a more comprehensive directive. Experience Design is
+                        a discipline that creates expansive experiences for each & every user in all aspects of a
+                        product, service, or occasion. It looks at digital, physical, and indirect (family member,
+                        friends, family member) experiences from the end-user’s perspective. Experience design involves
+                        technology but generally considers more elements (like technology, environmental factors,
+                        spatial factors, physical objects) into consideration. Experience designers are holistic problem
+                        solvers who look at the entire brand ecosystem and focus on ‘moments of engagement, touchpoints,
+                        between people, and the ideas, feelings, and memories that these interactions create.’</p>
+                    <p>To summarise, the practice of User Experience (UX) Design focuses primarily on the digital world,
+                        and Experience Design (XD) takes into account the physical, emotional and digital world. Both
+                        fields include the use of technology and design. In our humble opinion, it is safe to say that
+                        User Experience Design is a subset of Experience Design.
                     </p>
-                    <p>One of the most basic and fundamental rules of good UX is to keep it simple. The navigation
-                        should be clear, easy to navigate, and intuitive for the user. For instance, it should be easy
-                        to find your way around the website. The user
-                        should be able to quickly find the information that they need by navigating from one section of
-                        the site to another. In order to create an appealing website, make sure the navigation is easy
-                        to understand.</p>
                 </div>
-                <blockquote class="qts">
-                    <h1>"In the beginner's mind there are many possibilites, but in the expert's there are few"</h1>
-                </blockquote>
+                <!--                 
                 <div class="container blg" style="margin-top: 0%;" data-scroll data-scroll-delay="0.1"
                     data-scroll-speed="2" data-scroll-offset="100">
                     <img src="/assets/resources/img/eco-bottles-ecommerce-web-design-tubik-studio.png"
                         style="width: 100%;" />
-                </div>
+                </div> -->
+                <!-- Marquee -->
+                <section class="marquees" style="background: transparent;">
+                    <a href="#">
+                        <div class="marquees__inner black-strock" aria-hidden="true" ref="inner"
+                            data-cursor-text="Contact Us" data-cursor="-color-white -xlg">
+
+                            <div class="marquees__part">
+                                GET TO KNOW US<img src="/assets/resources/img/footer-circle.svg" alt="" />
+                            </div>
+                            <div class="marquees__part">
+                                GET TO KNOW US<img src="/assets/resources/img/footer-circle.svg" alt="" />
+                            </div>
+                            <div class="marquees__part">
+                                GET TO KNOW US<img src="/assets/resources/img/footer-circle.svg" alt="" />
+                            </div>
+                            <div class="marquees__part">
+                                GET TO KNOW US<img src="/assets/resources/img/footer-circle.svg" alt="" />
+                            </div>
+                            <div class="marquees__part">
+                                GET TO KNOW US<img src="/assets/resources/img/footer-circle.svg" alt="" />
+                            </div>
+                            <div class="marquees__part">
+                                GET TO KNOW US<img src="/assets/resources/img/footer-circle.svg" alt="" />
+                            </div>
+                        </div>
+                    </a>
+                </section>
                 <!-- footer -->
-                <footer id="footer">
+                <footer id="footer" class="dark-footer">
                     <div class="f-container">
                         <div class="top-f" data-cursor="-exclusion -lg" data-cursor-stick="#cursor-stick-area">
                             <h3>Let’s Build Something </h3>
