--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -282,6 +282,16 @@
                 <!--top  Section-->
                 <section class="ser-hero digital" data-scroll data-bgcolor="#fff" data-humcolor="#000"
                     data-textcolor="#000">
+                    <video autoplay="" loop="" style="background-image:url;         position: absolute;
+                    /* left: 0; */
+                    right: 0;
+                    margin: 0 auto;
+                    object-fit: cover;
+                    opacity: 0.8;
+                    width: 65%;
+                " muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+                        <source src="/assets/resources/Service-bg-2.mp4" data-wf-ignore="true">
+                    </video>
                     <div class="el1 el-bg"></div>
                     <div class="el2 el-bg"></div>
                     <div class="el3 el-bg"></div>
