--- a/strategy.html
+++ b/strategy.html
@@ -389,6 +389,17 @@
                     </div>
                     <section id="sectionPin">
                         <div class="pin-wrap">
+                            <h2 class="bo-h">
+                                <img src="/assets/resources/img/Service-elements/sun-icon.svg" data-scroll=""
+                                    data-scroll-speed="8 ">
+                                <span>
+                                    So we made our own unique process to provide sound strategies and digital solutions
+                                    that
+                                    help our clients respond to the changing customer, technology and competitor
+                                    landscape
+                                    and achieve measurable outcomes for their business.
+                                </span>
+                            </h2>
                             <div class="item" data-text="01">
                                 <h4>GATHERING INSIGHTS</h4>
                                 <p>As strategic thinkers, every one of our engagements starts with a review of known
