--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
                                 </li>
                                 <li>
                                     <div class="accordion-title">
-                                        <h2><span>02</span>DESIGN
+                                        <h2><span>02</span>Design
                                         </h2>
                                         <figure>
                                             <i class="arrow-icon-large"> <svg xmlns="http://www.w3.org/2000/svg"
@@ -802,7 +802,7 @@
                                 </li>
                                 <li>
                                     <div class="accordion-title">
-                                        <h2><span>03</span>TECHNOLOGY</h2>
+                                        <h2><span>03</span>Technology</h2>
                                         <figure>
                                             <i class="arrow-icon-large"> <svg xmlns="http://www.w3.org/2000/svg"
                                                     viewBox="0 0 256.44 256.44">
@@ -841,7 +841,7 @@
                                 </li>
                                 <li>
                                     <div class="accordion-title">
-                                        <h2><span>04</span>MARKETING</h2>
+                                        <h2><span>04</span>Marketing</h2>
                                         <figure>
                                             <i class="arrow-icon-large"> <svg xmlns="http://www.w3.org/2000/svg"
                                                     viewBox="0 0 256.44 256.44">
