--- a/services.html
+++ b/services.html
@@ -329,7 +329,7 @@
                 </section>
                 <div class="container" data-bgcolor="#fff" data-humcolor="#000">
                     <div class="services-s">
-                        <div class="flex-con align-center " data-scroll>
+                        <div class="flex-con align-center wrap-reverse" data-scroll>
                             <div class="fle p-right text_anim">
                                 <h3 class="typ" id="5">
                                     <span> STRATEGY</span>
@@ -342,9 +342,13 @@
                                             Research, Campaign Planning and Digital Transformation Consulting.
                                         </span>
                                     </p>
-                                    <div class="en-form-submit"><a class="en-btn en-btn_send" data-magnetic
-                                            data-cursor="-opaque"><span data-text="Read More">Read More</span></a>
-                                    </div>
+                                    <span>
+                                        <div class="en-form-submit">
+                                            <a href="strategy.html" class="en-btn en-btn_send" data-magnetic
+                                                data-cursor="-opaque"><span data-text="Read More">Read
+                                                    More</span></a>
+                                        </div>
+                                    </span>
                                 </div>
                             </div>
                             <div class="image" data-scroll="">
@@ -355,7 +359,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="flex-con align-center" data-scroll>
+                        <div class="flex-con align-center wrap-flex" data-scroll>
                             <div class="image text_anim">
                                 <span>
                                     <img src="/assets/resources/img/Service-elements/Service-02.svg" alt="" />
@@ -376,13 +380,14 @@
                                             Mapping, Visual Design and UI Kits.
                                         </span>
                                     </p>
-                                    <div class="en-form-submit"><a class="en-btn en-btn_send" data-magnetic
-                                            data-cursor="-opaque"><span data-text="Read More">Read More</span></a>
+                                    <div class="en-form-submit"><a href="interface-design.html"
+                                            class="en-btn en-btn_send" data-magnetic data-cursor="-opaque"><span
+                                                data-text="Read More">Read More</span></a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="flex-con align-center " data-scroll>
+                        <div class="flex-con align-center wrap-reverse" data-scroll>
                             <div class="fle p-right text_anim">
                                 <h3 class="typ" id="#1">
                                     <span>
@@ -397,34 +402,42 @@
                                             Integrations,
                                             Support & Maintenance.</span>
                                     </p>
-                                    <div class="en-form-submit">
-                                        <span>
+                                    <span>
+                                        <div class="en-form-submit">
                                             <a class="en-btn en-btn_send" data-magnetic data-cursor="-opaque"><span
                                                     data-text="Read More">Read More</span></a>
-                                        </span>
-                                    </div>
+                                        </div>
+                                    </span>
                                 </div>
                             </div>
-                            <div class="image" text_anim>
-                                <img src="/assets/resources/img/Service-elements/Service-03.svg" alt="" />
+                            <div class="image  text_anim">
+                                <span>
+                                    <img src="/assets/resources/img/Service-elements/Service-03.svg" alt="" />
+                                </span>
                             </div>
                         </div>
-                        <div class="flex-con align-center  data-scroll">
-                            <div class="image">
-                                <img src="/assets/resources/img/Service-elements/Service-04.svg" alt="" />
+                        <div class="flex-con align-center wrap-flex" data-scroll="">
+                            <div class="image  text_anim">
+                                <span>
+                                    <img src="/assets/resources/img/Service-elements/Service-04.svg" alt="" />
+                                </span>
                             </div>
-                            <div class="fle p-left ">
+                            <div class="fle p-left  text_anim">
                                 <h3 class="typ" id="#2">
-                                    MARKETING
+                                    <span> MARKETING</span>
                                 </h3>
                                 <div class="content-p" data-scroll data-scroll-offset="100">
-                                    <p>Search Engine Optimisation, Social Media Management, Influencer Management, Media
+                                    <p>
+                                        Search Engine Optimisation, Social Media Management, Influencer Management,
+                                        Media
                                         Planning & Buying, Auction Media Management, Content Curation & Online
                                         Reputation Management.
                                     </p>
-                                    <div class="en-form-submit"><a class="en-btn en-btn_send" data-magnetic
-                                            data-cursor="-opaque"><span data-text="Read More">Read More</span></a>
-                                    </div>
+                                    <span>
+                                        <div class="en-form-submit"><a class="en-btn en-btn_send" data-magnetic
+                                                data-cursor="-opaque"><span data-text="Read More">Read More</span></a>
+                                        </div>
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -432,7 +445,6 @@
                     </div>
                 </div>
                 <section class="aproch" data-scroll>
-                    <img class="top-bg" src="/assets/resources/img/our-team.png" alt="" />
                     <div class="container text_anim">
                         <h2><span>
                                 OUR APPROACH
@@ -444,10 +456,12 @@
                                 <div class="ap-no">
                                     <h6><span class="numb">
                                             01
-                                        </span><span class="cons">Define</span>
+                                        </span>
                                     </h6>
                                 </div>
                                 <div class="ap-prah">
+                                    <h6><span class="cons">Define</span>
+                                    </h6>
                                     <p><span>Develop a thorough understanding of the project, audience, and objectives
                                             to
                                             formulate a
@@ -456,9 +470,10 @@
                             </div>
                             <div class="flex-con">
                                 <div class="ap-no">
-                                    <h6><span class="numb">02</span><span class="cons">DESIGN</span></h6>
+                                    <h6><span class="numb">02</span></h6>
                                 </div>
                                 <div class="ap-prah">
+                                    <h6><span class="cons">DESIGN</span></h6>
                                     <p><span>
                                             Craft a purposeful design to reflect the objectives and indicate the
                                             direction
@@ -468,9 +483,12 @@
                             </div>
                             <div class="flex-con">
                                 <div class="ap-no">
-                                    <h6><span class="numb">03</span><span class="cons">IMPLEMENT</span></h6>
+                                    <h6><span class="numb">03</span></h6>
                                 </div>
                                 <div class="ap-prah">
+                                    <h6>
+                                        <span class="cons">IMPLEMENT</span>
+                                    </h6>
                                     <p><span>
                                             Bring the design to life in the form of an interactive and functional
                                             prototype.
@@ -478,11 +496,14 @@
                                         </span></p>
                                 </div>
                             </div>
+                        </div>
+                        <div class="approach-lis m-0">
                             <div class="flex-con">
                                 <div class="ap-no">
-                                    <h6><span class="numb">04</span><span class="cons">DEVELOP</span></h6>
+                                    <h6><span class="numb">04</span></h6>
                                 </div>
                                 <div class="ap-prah">
+                                    <span class="cons">DEVELOP</span>
                                     <p><span>
                                             Incorporate implementation and technical components into a highly functional
                                             system, ready for review.
@@ -491,9 +512,12 @@
                             </div>
                             <div class="flex-con">
                                 <div class="ap-no">
-                                    <h6><span class="numb">05</span><span class="cons">DELIVER</span></h6>
+                                    <h6><span class="numb">05</span></h6>
                                 </div>
                                 <div class="ap-prah">
+                                    <h6>
+                                        <span class="cons">DELIVER</span>
+                                    </h6>
                                     <p><span>
                                             Review, refine, test and prepare final product for delivery. Launch and
                                             continue
@@ -504,7 +528,6 @@
                             </div>
                         </div>
                     </div>
-                    <img class="bottom-bg" src="/assets/resources/img/our-team.png" alt="" />
                     <div class="marquees" style="background: transparent;">
                         <a href="#">
                             <div class="marquees__inner" aria-hidden="true" ref="inner" data-cursor-text="WORK"
@@ -533,7 +556,7 @@
                     </div>
                 </section>
                 <!-- footer -->
-                <footer id="footer">
+                <footer id="footer" class="dark-footer">
                     <div class="f-container">
                         <div class="top-f" data-cursor="-exclusion -lg" data-cursor-stick="#cursor-stick-area">
                             <h3>Let’s Build Something </h3>
