--- a/index.html
+++ b/index.html
@@ -1016,7 +1016,7 @@
 
                                     <!--Project-->
                                     <div class="ar-work" data-tilt data-tilt-glare="true" data-tilt-max="30"
-                                        data-tilt-speed="20">
+                                        data-tilt-speed="20" data-cursor-text="View" data-cursor="-color-bespin">
                                         <!--Project URL-->
                                         <a href="">
                                             <!--Project Image-->
@@ -1044,6 +1044,8 @@
                         <!--/Column-->
                     </div>
                     <!--/Wrapper-->
+                    <div class="en-form-submit"><a class="en-btn en-btn_send" data-magnetic data-cursor="-opaque"><span
+                                data-text="Read More">View All Project</span></a></div>
                 </div>
                 <!--/Section -->
                 <!-- Section Mobile -->
