--- a/strategy.html
+++ b/strategy.html
@@ -305,7 +305,7 @@
                     </div>
                 </section>
                 <!-- sec -->
-                <section class="bol-prh" data-humcolor="#000" data-textcolor="#000">
+                <section class="bol-prh heigh_100 flex-cen" data-humcolor="#000" data-textcolor="#000">
                     <p class="opacity-0 p-s" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
                         With a rock-solid strategy, we create trustworthy identities, compelling experiences, and
                         engaging content to help brands make a delightful impact on their users, stakeholders, and their
@@ -387,19 +387,8 @@
                             </span>
                         </h2>
                     </div>
-                    <section id="sectionPin">
+                    <section id="sectionPin" class="serv">
                         <div class="pin-wrap">
-                            <h2 class="bo-h">
-                                <img src="/assets/resources/img/Service-elements/sun-icon.svg" data-scroll=""
-                                    data-scroll-speed="8 ">
-                                <span>
-                                    So we made our own unique process to provide sound strategies and digital solutions
-                                    that
-                                    help our clients respond to the changing customer, technology and competitor
-                                    landscape
-                                    and achieve measurable outcomes for their business.
-                                </span>
-                            </h2>
                             <div class="item" data-text="01">
                                 <h4>GATHERING INSIGHTS</h4>
                                 <p>As strategic thinkers, every one of our engagements starts with a review of known
