--- a/about.html
+++ b/about.html
@@ -1572,7 +1572,7 @@
 
                         </div>
                     </section> -->
-                    <section class="section-container teams-slider">
+                    <!-- <section class="section-container teams-slider">
                         <div class="mobile-container image-1">
                             <div class="slider-element-container">
                                 <div class="swiper-container">
@@ -2066,7 +2066,7 @@
                                 </div>
                             </div>
                         </div>
-                    </section> -->
+                    </section>  -->
                     <!-- About Logos -->
                     <section class="client-section" data-humcolor="#fff" data-scroll>
 
